--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "swiftsync",
   "version": "1.0.0",
-  "description": "",
+  "description": "Real Time Chat Application",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -9,12 +9,11 @@
     "dev": "nodemon backend/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Watter!",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "morgan": "^1.10.0",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
