--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   "author": "Watter!",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.38.5",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
